fix: css styling sheet for card z-index

--- a/src/components/Cards.module.css
+++ b/src/components/Cards.module.css
@@ -4,8 +4,12 @@
   overflow: hidden;
 }
 
-.card{
-  z-index: 100;
+.card {
+  z-index: 10;
   position: relative;
 }
 
+.card-front {
+  z-index: 20;
+  position: relative;
+}
